gcc/testsuite/gdc.test/compilable/b18197.d
// REQUIRED_ARGS: -c -m32 -O -inline

struct A
{
    double a;
}

A makeA(double value)
{
    return A(value);
}

double test(double x)
{
    ulong p = *cast(ulong *)&x;
    return makeA(x).a;
}
